[gd_scene load_steps=2 format=3 uid="uid://c8qvt5vqjkuv7q"]

[ext_resource type="Script" path="res://scripts/ui/hud/pause_menu_hud.gd" id="1_yvmqe"]

[node name="PauseMenuHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvmqe")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "游戏暂停"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 70.0
offset_right = -50.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="ResumeButton" type="Button" parent="Panel/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "继续游戏"

[node name="SaveButton" type="Button" parent="Panel/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "保存游戏"

[node name="LoadButton" type="Button" parent="Panel/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "加载游戏"

[node name="SettingsButton" type="Button" parent="Panel/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "设置"

[node name="MainMenuButton" type="Button" parent="Panel/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "返回主菜单"

[node name="QuitButton" type="Button" parent="Panel/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "退出游戏"
